--- a/participate_game_93.html
+++ b/participate_game_93.html
@@ -95,6 +95,8 @@
             ctx.textAlign = "center";
             ctx.textBaseline = "middle";
             ctx.fillText('*', p.x, p.y);
+            
+            ctx.fillText(p.name, p.x, p.y-1.5*circ_r);
         }
 
         requestAnimationFrame(draw);
