--- a/participate_game_93.html
+++ b/participate_game_93.html
@@ -96,6 +96,7 @@
             ctx.textBaseline = "middle";
             ctx.fillText('*', p.x, p.y);
             
+            ctx.fillStyle = "black";
             ctx.fillText(p.name, p.x, p.y-1.5*circ_r);
         }
 
