--- a/participate_game_93.html
+++ b/participate_game_93.html
@@ -90,14 +90,15 @@
         for (const id in players) {
             const p = players[id];
 
-            ctx.font = "24px Georgia";
+            ctx.font = "10px Georgia";
             ctx.fillStyle = "red"; 
             ctx.textAlign = "center";
             ctx.textBaseline = "middle";
             ctx.fillText('*', p.x, p.y);
             
+            ctx.textAlign = "right";
             ctx.fillStyle = "black";
-            ctx.fillText(p.name, p.x, p.y-1.5*circ_r);
+            ctx.fillText(p.name, p.x, p.y);
         }
 
         requestAnimationFrame(draw);
