--- a/participate_game_93.html
+++ b/participate_game_93.html
@@ -88,7 +88,7 @@
             ctx.font = "14px Georgia";
             ctx.textAlign = "left";
             ctx.fillStyle = "black";
-            ctx.fillText(p.name+' ('+p.health+')', p.x+6, p.y);
+            ctx.fillText(p.name+' ('+Math.round(p.health)+')', p.x+8, p.y+4);
         }
 
         requestAnimationFrame(draw);
