--- a/participate_game_93.html
+++ b/participate_game_93.html
@@ -59,6 +59,10 @@
         delete players[id];
     });
 
+    socket.on('moveDenied', ({ reason }) => {
+    console.log("Move blocked:", reason);
+    });
+
     document.addEventListener('keydown', (e) => {
         const me = players[playerId];
         if (!me) return;
